sonar/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  namespace: infra
  labels:
    app: sonarqube
spec:
  ports:
    - name: sonarqube
      port: 80
      targetPort: 9000
      protocol: TCP
  selector:
    app: sonarqube
